--- a/1_HAR_modelo_centralizado.ipynb
+++ b/1_HAR_modelo_centralizado.ipynb
@@ -263,7 +263,14 @@
     "        #x = x.view(x.size(0), 1792)\n",
     "        out = self.classifier(x)\n",
     "\n",
-    "        return out\n"
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Treinando o modelo"
    ]
   },
   {
@@ -379,6 +386,13 @@
     "model = HARmodel(40, 5).to(device)\n",
     "\n",
     "train(model, train_loader, epochs, device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testando o modelo"
    ]
   },
   {
