Fix para Windows

--- a/2_HAR_client_1.ipynb
+++ b/2_HAR_client_1.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -63,7 +63,11 @@
     "#Carregando os dados\n",
     "import flwr as fl\n",
     "import torch\n",
-    "import aux\n",
+    "\n",
+    "# Para o windows, usando o auxiliary.py ao invés do aux.py\n",
+    "# https://stackoverflow.com/questions/36225708/cannot-create-a-directory-named-aux-or-starting-by-aux-on-windows-8-1\n",
+    "# https://bugs.launchpad.net/tensortoolbox/+bug/1400505\n",
+    "import auxiliary as aux \n",
     "\n",
     "DATA_ROOT = \"./data/pml-training.csv\"\n",
     "\n",
@@ -92,7 +96,7 @@
     "### Rede Neural\n",
     "\n",
     "Atualmente o modelo de classificação mais adequado e vantajoso para a modelagem de um ambiente federado são as redes neurais.\n",
-    "Definimos essa configuração de arquitetura por meio da criação de uma classe em Pytorch denominada **HARmodel** presente no arquivo auxiliar *aux.py* adicionado."
+    "Definimos essa configuração de arquitetura por meio da criação de uma classe em Pytorch denominada **HARmodel** presente no arquivo auxiliar *aux.py (auxiliary.py)*  adicionado."
    ]
   },
   {
@@ -127,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "id": "MEUIciNJ69re"
    },
@@ -273,159 +277,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "id": "CD9ie8II7QHB",
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG flower 2021-08-20 00:20:52,722 | connection.py:36 | ChannelConnectivity.IDLE\n",
-      "INFO flower 2021-08-20 00:20:52,723 | app.py:61 | Opened (insecure) gRPC connection\n",
-      "DEBUG flower 2021-08-20 00:20:52,724 | connection.py:36 | ChannelConnectivity.READY\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training 10 epoch(s) w/ 77 mini-batches each\n",
-      "\n",
-      "Train Epoch: 0 [4416/4928 (90%)] Loss: 1.607569, Acc: 0.226902 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 1 [4416/4928 (90%)] Loss: 1.588585, Acc: 0.275362 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 2 [4416/4928 (90%)] Loss: 1.398045, Acc: 0.298460 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 3 [4416/4928 (90%)] Loss: 1.257414, Acc: 0.339221 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 4 [4416/4928 (90%)] Loss: 1.244720, Acc: 0.386549 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 5 [4416/4928 (90%)] Loss: 1.315310, Acc: 0.418252 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 6 [4416/4928 (90%)] Loss: 1.437108, Acc: 0.444746 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 7 [4416/4928 (90%)] Loss: 1.338868, Acc: 0.473505 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 8 [4416/4928 (90%)] Loss: 1.264971, Acc: 0.491621 (Cliente 0)\t\t\t\t\n",
-      "Training 10 epoch(s) w/ 77 mini-batches each055, Acc: 0.509511 (Cliente 0)\t\t\t\t\n",
-      "\n",
-      "Train Epoch: 0 [4416/4928 (90%)] Loss: 1.070751, Acc: 0.483922 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 1 [4416/4928 (90%)] Loss: 1.409855, Acc: 0.517437 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 2 [4416/4928 (90%)] Loss: 1.087304, Acc: 0.539176 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 3 [4416/4928 (90%)] Loss: 1.018033, Acc: 0.541440 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 4 [4416/4928 (90%)] Loss: 1.252189, Acc: 0.548234 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 5 [4416/4928 (90%)] Loss: 0.848898, Acc: 0.567029 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 6 [4416/4928 (90%)] Loss: 0.871868, Acc: 0.566123 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 7 [4416/4928 (90%)] Loss: 0.964573, Acc: 0.579937 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 8 [4416/4928 (90%)] Loss: 1.011741, Acc: 0.585598 (Cliente 0)\t\t\t\t\n",
-      "Training 10 epoch(s) w/ 77 mini-batches each799, Acc: 0.582201 (Cliente 0)\t\t\t\t\n",
-      "\n",
-      "Train Epoch: 0 [4416/4928 (90%)] Loss: 1.165771, Acc: 0.567255 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 1 [4416/4928 (90%)] Loss: 1.042661, Acc: 0.591259 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 2 [4416/4928 (90%)] Loss: 1.105646, Acc: 0.612998 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 3 [4416/4928 (90%)] Loss: 1.023655, Acc: 0.610734 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 4 [4416/4928 (90%)] Loss: 0.999048, Acc: 0.605978 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 5 [4416/4928 (90%)] Loss: 0.870125, Acc: 0.621603 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 6 [4416/4928 (90%)] Loss: 0.804591, Acc: 0.627038 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 7 [4416/4928 (90%)] Loss: 1.191288, Acc: 0.610281 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 8 [4416/4928 (90%)] Loss: 0.989067, Acc: 0.632926 (Cliente 0)\t\t\t\t\n",
-      "Training 10 epoch(s) w/ 77 mini-batches each602, Acc: 0.642889 (Cliente 0)\t\t\t\t\n",
-      "\n",
-      "Train Epoch: 0 [4416/4928 (90%)] Loss: 0.792191, Acc: 0.625679 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 1 [4416/4928 (90%)] Loss: 1.159634, Acc: 0.635190 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 2 [4416/4928 (90%)] Loss: 1.072517, Acc: 0.636322 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 3 [4416/4928 (90%)] Loss: 0.918519, Acc: 0.637908 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 4 [4416/4928 (90%)] Loss: 0.963051, Acc: 0.647645 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 5 [4416/4928 (90%)] Loss: 0.903205, Acc: 0.654891 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 6 [4416/4928 (90%)] Loss: 0.723720, Acc: 0.660326 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 7 [4416/4928 (90%)] Loss: 0.952181, Acc: 0.649230 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 8 [4416/4928 (90%)] Loss: 1.272295, Acc: 0.645607 (Cliente 0)\t\t\t\t\n",
-      "Training 10 epoch(s) w/ 77 mini-batches each592, Acc: 0.661911 (Cliente 0)\t\t\t\t\n",
-      "\n",
-      "Train Epoch: 0 [4416/4928 (90%)] Loss: 1.076045, Acc: 0.649230 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 1 [4416/4928 (90%)] Loss: 0.964552, Acc: 0.656703 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 2 [4416/4928 (90%)] Loss: 1.140177, Acc: 0.666440 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 3 [4416/4928 (90%)] Loss: 0.734636, Acc: 0.663723 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 4 [4416/4928 (90%)] Loss: 0.853634, Acc: 0.670743 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 5 [4416/4928 (90%)] Loss: 0.863422, Acc: 0.673234 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 6 [4416/4928 (90%)] Loss: 0.840563, Acc: 0.668478 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 7 [4416/4928 (90%)] Loss: 0.861358, Acc: 0.680933 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 8 [4416/4928 (90%)] Loss: 1.142239, Acc: 0.669384 (Cliente 0)\t\t\t\t\n",
-      "Training 10 epoch(s) w/ 77 mini-batches each977, Acc: 0.678895 (Cliente 0)\t\t\t\t\n",
-      "\n",
-      "Train Epoch: 0 [4416/4928 (90%)] Loss: 0.903321, Acc: 0.664629 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 1 [4416/4928 (90%)] Loss: 1.092128, Acc: 0.665308 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 2 [4416/4928 (90%)] Loss: 0.785236, Acc: 0.670516 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 3 [4416/4928 (90%)] Loss: 0.811787, Acc: 0.671422 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 4 [4416/4928 (90%)] Loss: 0.790509, Acc: 0.681386 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 5 [4416/4928 (90%)] Loss: 1.159143, Acc: 0.689538 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 6 [4416/4928 (90%)] Loss: 0.889030, Acc: 0.688179 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 7 [4416/4928 (90%)] Loss: 0.825600, Acc: 0.682518 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 8 [4416/4928 (90%)] Loss: 0.740526, Acc: 0.676178 (Cliente 0)\t\t\t\t\n",
-      "Training 10 epoch(s) w/ 77 mini-batches each181, Acc: 0.692935 (Cliente 0)\t\t\t\t\n",
-      "\n",
-      "Train Epoch: 0 [4416/4928 (90%)] Loss: 1.059841, Acc: 0.672554 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 1 [4416/4928 (90%)] Loss: 0.905354, Acc: 0.675498 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 2 [4416/4928 (90%)] Loss: 0.984747, Acc: 0.683877 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 3 [4416/4928 (90%)] Loss: 0.857404, Acc: 0.697011 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 4 [4416/4928 (90%)] Loss: 0.833015, Acc: 0.695879 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 5 [4416/4928 (90%)] Loss: 0.879818, Acc: 0.702899 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 6 [4416/4928 (90%)] Loss: 1.008033, Acc: 0.686821 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 7 [4416/4928 (90%)] Loss: 1.068573, Acc: 0.688406 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 8 [4416/4928 (90%)] Loss: 0.963993, Acc: 0.700181 (Cliente 0)\t\t\t\t\n",
-      "Training 10 epoch(s) w/ 77 mini-batches each584, Acc: 0.689538 (Cliente 0)\t\t\t\t\n",
-      "\n",
-      "Train Epoch: 0 [4416/4928 (90%)] Loss: 0.836238, Acc: 0.691803 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 1 [4416/4928 (90%)] Loss: 0.691233, Acc: 0.698822 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 2 [4416/4928 (90%)] Loss: 1.092907, Acc: 0.691576 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 3 [4416/4928 (90%)] Loss: 0.589502, Acc: 0.694746 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 4 [4416/4928 (90%)] Loss: 0.700340, Acc: 0.703125 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 5 [4416/4928 (90%)] Loss: 0.727571, Acc: 0.712636 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 6 [4416/4928 (90%)] Loss: 0.717441, Acc: 0.721014 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 7 [4416/4928 (90%)] Loss: 1.058437, Acc: 0.696105 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 8 [4416/4928 (90%)] Loss: 0.607249, Acc: 0.712636 (Cliente 0)\t\t\t\t\n",
-      "Training 10 epoch(s) w/ 77 mini-batches each877, Acc: 0.712409 (Cliente 0)\t\t\t\t\n",
-      "\n",
-      "Train Epoch: 0 [4416/4928 (90%)] Loss: 0.850781, Acc: 0.689991 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 1 [4416/4928 (90%)] Loss: 0.919664, Acc: 0.697237 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 2 [4416/4928 (90%)] Loss: 0.846018, Acc: 0.698596 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 3 [4416/4928 (90%)] Loss: 0.865813, Acc: 0.712636 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 4 [4416/4928 (90%)] Loss: 0.767398, Acc: 0.705616 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 5 [4416/4928 (90%)] Loss: 0.990112, Acc: 0.712862 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 6 [4416/4928 (90%)] Loss: 1.217485, Acc: 0.717618 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 7 [4416/4928 (90%)] Loss: 0.698063, Acc: 0.717618 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 8 [4416/4928 (90%)] Loss: 0.801333, Acc: 0.714221 (Cliente 0)\t\t\t\t\n",
-      "Training 10 epoch(s) w/ 77 mini-batches each035, Acc: 0.711957 (Cliente 0)\t\t\t\t\n",
-      "\n",
-      "Train Epoch: 0 [4416/4928 (90%)] Loss: 0.838144, Acc: 0.706975 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 1 [4416/4928 (90%)] Loss: 0.868191, Acc: 0.711730 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 2 [4416/4928 (90%)] Loss: 0.777427, Acc: 0.716938 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 3 [4416/4928 (90%)] Loss: 0.970627, Acc: 0.727582 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 4 [4416/4928 (90%)] Loss: 0.746485, Acc: 0.718750 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 5 [4416/4928 (90%)] Loss: 0.625255, Acc: 0.728714 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 6 [4416/4928 (90%)] Loss: 0.659037, Acc: 0.722373 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 7 [4416/4928 (90%)] Loss: 0.834039, Acc: 0.717844 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 8 [4416/4928 (90%)] Loss: 0.838727, Acc: 0.724864 (Cliente 0)\t\t\t\t\n",
-      "Train Epoch: 9 [4416/4928 (90%)] Loss: 0.657493, Acc: 0.731884 (Cliente 0)\t\t\t\t\r"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG flower 2021-08-20 00:21:43,830 | connection.py:68 | Insecure gRPC channel closed\n",
-      "INFO flower 2021-08-20 00:21:43,831 | app.py:72 | Disconnect and shut down\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Client 0 - Evaluate on 4905 samples: Average loss: 0.0083, Accuracy: 82.26%\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "client_address = \"[::]:8081\"\n",
     "fl.client.start_client(client_address, client)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -435,7 +303,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -449,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
