--- a/1_HAR_modelo_centralizado.ipynb
+++ b/1_HAR_modelo_centralizado.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "id": "bZy5f_Myg80m"
    },
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "id": "nzKwxcH9yTis"
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -265,34 +265,34 @@
      "text": [
       "Training 100 epoch(s) w/ 206 mini-batches each\n",
       "\n",
-      "Train Epoch: 1 [13147/13184 (100%)] Loss: 1.540230 ACC: 0.286453\t\t\t\t\n",
+      "Train Epoch: 1 [13147/13184 (100%)] Loss: 1.580127 ACC: 0.286301\t\t\t\t\n",
       "\n",
-      "Train Epoch: 11 [13147/13184 (100%)] Loss: 1.232482 ACC: 0.438959\t\t\t\t\n",
+      "Train Epoch: 11 [13147/13184 (100%)] Loss: 1.408527 ACC: 0.409675\t\t\t\t\n",
       "\n",
-      "Train Epoch: 21 [13147/13184 (100%)] Loss: 1.056550 ACC: 0.588043\t\t\t\t\n",
+      "Train Epoch: 21 [13147/13184 (100%)] Loss: 1.161268 ACC: 0.540047\t\t\t\t\n",
       "\n",
-      "Train Epoch: 31 [13147/13184 (100%)] Loss: 0.841162 ACC: 0.679090\t\t\t\t\n",
+      "Train Epoch: 31 [13147/13184 (100%)] Loss: 0.860597 ACC: 0.639233\t\t\t\t\n",
       "\n",
-      "Train Epoch: 41 [13147/13184 (100%)] Loss: 0.525540 ACC: 0.724576\t\t\t\t\n",
+      "Train Epoch: 41 [13147/13184 (100%)] Loss: 0.601902 ACC: 0.688902\t\t\t\t\n",
       "\n",
-      "Train Epoch: 51 [13147/13184 (100%)] Loss: 0.561099 ACC: 0.754849\t\t\t\t\n",
+      "Train Epoch: 51 [13147/13184 (100%)] Loss: 0.902063 ACC: 0.725337\t\t\t\t\n",
       "\n",
-      "Train Epoch: 61 [13147/13184 (100%)] Loss: 0.436853 ACC: 0.771279\t\t\t\t\n",
+      "Train Epoch: 61 [13147/13184 (100%)] Loss: 0.570239 ACC: 0.744504\t\t\t\t\n",
       "\n",
-      "Train Epoch: 71 [13147/13184 (100%)] Loss: 0.687573 ACC: 0.786643\t\t\t\t\n",
+      "Train Epoch: 71 [13147/13184 (100%)] Loss: 0.524825 ACC: 0.764205\t\t\t\t\n",
       "\n",
-      "Train Epoch: 81 [13147/13184 (100%)] Loss: 0.401357 ACC: 0.786643\t\t\t\t\n",
+      "Train Epoch: 81 [13147/13184 (100%)] Loss: 0.633445 ACC: 0.777212\t\t\t\t\n",
       "\n",
-      "Train Epoch: 91 [13147/13184 (100%)] Loss: 0.436664 ACC: 0.797444\t\t\t\t\n"
+      "Train Epoch: 91 [13147/13184 (100%)] Loss: 0.482896 ACC: 0.790370\t\t\t\t\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.7981288506883699"
+       "0.7953145204229102"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "id": "OcKMkh1oiz8U"
    },
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -362,7 +362,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Evaluation (#6475 samples) : Loss 0.005552149377763271 Acc 0.886023166023166\n"
+      "Evaluation (#6475 samples) : Loss 0.006058879662305117 Acc 0.8863320463320463\n"
      ]
     }
    ],
@@ -387,6 +387,13 @@
     "\n",
     "Velloso, E.; Bulling, A.; Gellersen, H.; Ugulino, W.; Fuks, H. Qualitative Activity Recognition of Weight Lifting Exercises. Proceedings of 4th International Conference in Cooperation with SIGCHI (Augmented Human ’13) . Stuttgart, Germany: ACM SIGCHI, 2013."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -396,7 +403,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -410,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
