--- a/3_HAR_server.ipynb
+++ b/3_HAR_server.ipynb
@@ -37,14 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "4Hjf37vr9oYq"
    },
    "outputs": [],
    "source": [
     "import torch\n",
-    "import aux\n",
+    "import auxiliary as aux\n",
     "\n",
     "DATA_ROOT = \"./data/pml-training.csv\"\n",
     "\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -228,7 +228,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -242,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
